Updated index.html with CryptoPunkPepes section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         body { font-family: Arial, sans-serif; }
         .collection { margin: 50px 0; padding: 20px; border-bottom: 1px solid #ddd; }
         h2 { color: #333; }
+        a { color: #007bff; text-decoration: none; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
@@ -16,42 +18,11 @@
 
     <div class="collection" id="cryptopunkpepes">
         <h2>CryptoPunkPepes</h2>
-        <!-- Collection content goes here -->
+        <p>Explore the unique and vibrant world of CryptoPunkPepes. Each piece in this collection is a testament to creativity and innovation in the NFT space.</p>
+        <p>Check out the full collection on <a href="https://opensea.io/collection/cryptopunkpepes" target="_blank">OpenSea</a>.</p>
     </div>
 
-    <div class="collection" id="dankdirectory">
-        <h2>Dank Directory</h2>
-        <!-- Collection content goes here -->
-    </div>
+    <!-- Other collection sections go here... -->
 
-    <div class="collection" id="wojakway">
-        <h2>Wojak Way</h2>
-        <!-- Collection content goes here -->
-    </div>
-
-    <div class="collection" id="mementos">
-        <h2>Meme-entos</h2>
-        <!-- Collection content goes here -->
-    </div>
-
-    <div class="collection" id="phockheads">
-        <h2>Phockheads</h2>
-        <!-- Collection content goes here -->
-    </div>
-
-    <div class="collection" id="fakerarecommons">
-        <h2>Fake Rare Commons</h2>
-        <!-- Collection content goes here -->
-    </div>
-
-    <div class="collection" id="droolingapebusclub">
-        <h2>Drooling Ape Bus Club</h2>
-        <!-- Collection content goes here -->
-    </div>
-
-    <div class="collection" id="fakeapes">
-        <h2>Fake Apes</h2>
-        <!-- Collection content goes here -->
-    </div>
 </body>
 </html>
