Updated index.html with placeholder for CryptoPunkPepes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <style>
         body { font-family: Arial, sans-serif; }
         .collection { margin: 50px 0; padding: 20px; border-bottom: 1px solid #ddd; }
+        .collection img { width: 100%; height: auto; }
         h2 { color: #333; }
-        a { color: #007bff; text-decoration: none; }
-        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
@@ -18,11 +17,7 @@
 
     <div class="collection" id="cryptopunkpepes">
         <h2>CryptoPunkPepes</h2>
-        <p>Explore the unique and vibrant world of CryptoPunkPepes. Each piece in this collection is a testament to creativity and innovation in the NFT space.</p>
-        <p>Check out the full collection on <a href="https://opensea.io/collection/cryptopunkpepes" target="_blank">OpenSea</a>.</p>
+        <img src="placeholder.jpg" alt="CryptoPunkPepes Image">
     </div>
-
-    <!-- Other collection sections go here... -->
-
 </body>
 </html>
